reduced background size, changed format to .jpg

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ main{
     display: flex;
     flex-direction: column;
     background-color: black;
-    background-image: url('./images/background.jpeg');
+    background-image: url('./images/background.jpg');
     background-size: cover;
     overflow: auto;
 }
