--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ img.bg{
     min-width: 550px;
     background-color: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
     box-shadow: 0px 0px 10px 8px rgba(0, 0, 0,0.5);
 }
 
@@ -196,6 +197,7 @@ footer{
     height: 20px;
     background-color: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
     border-style: none;
     padding: 5px;
     font-size: 14px;
