--- a/style.css
+++ b/style.css
@@ -15,14 +15,41 @@ body{
 }
 
 main{
+    position: fixed;
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: black;
-    background-image: url('./images/background.jpg');
-    background-size: cover;
+    z-index: 1;
     overflow: auto;
+        /*
+    background-color: black;
+    background: url('./images/background.jpg');
+    background-size: cover;
+    animation: animatebackground 10s ease-in-out infinite;
+    -webkit-animation: animatebackground 10s ease-in-out infinite;*/
+}
+
+.bg{
+    position:fixed;
+    z-index:0;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background: 
+        radial-gradient(#0000FF 5%,#000066 20%,#000000 60%),
+        url('./images/background.jpg');
+    background-size: cover;
+    background-blend-mode:luminosity;
+}
+
+#canvas{
+    width:100%;
+    height:100%;
+    /*mix-blend-mode: hard-light;*/
+    mix-blend-mode:screen;
+    opacity:0.9;
 }
 
 
@@ -39,7 +66,7 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 40%;
+    width: 85%;
     min-width: 350px;
     transition: 0.5s;
 	-webkit-animation: fade-in 0.3s linear both;
@@ -74,9 +101,9 @@ img.bg{
     margin: 30px 30px 20px 0px;
     border-radius: 30px;
     width: 60%;
-    min-width: 550px;
-    background-color: rgba(0, 0, 0, 0.7);
-    backdrop-filter: blur(8px);
+    min-width: 450px;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(8px);
     box-shadow: 0px 0px 10px 8px rgba(0, 0, 0,0.5);
 	-webkit-animation: fade-in 0.3s linear both;
@@ -167,7 +194,7 @@ input:invalid:not(:placeholder-shown):not(:focus){
     background: url('./images/wrong.svg');
     background-size: 20px;
     background-repeat: no-repeat;
-    background-position: 185px 5px;
+    background-position: 97% 50%;
     outline: 2px solid red;
     outline-offset: -2px;
     background-color:pink;
@@ -177,7 +204,7 @@ input:valid:not(:placeholder-shown):not(:focus){
     background: url('./images/check.svg');
     background-size: 20px;
     background-repeat: no-repeat;
-    background-position: 185px 5px;
+    background-position: 97% 50%;
     background-color:rgb(228, 255, 228);
     outline: 2px solid lightgreen;
     outline-offset: -2px;
@@ -185,7 +212,7 @@ input:valid:not(:placeholder-shown):not(:focus){
 
 
 .signupform{
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0,0,30,0.6);
     padding: 0px 0px 20px 20px;
     margin: 0px 20px 0px 20px;
     border-radius: 15px;
@@ -212,7 +239,7 @@ footer{
     backdrop-filter: blur(3px);
     -webkit-backdrop-filter: blur(3px);
     border-style: none;
-    padding: 5px;
+    padding: 0px;
     font-size: 14px;
     color: rgba(255,255,255,0.5);
 }
@@ -253,4 +280,25 @@ input:invalid:not(:focus):not(:placeholder-shown)~.requirements{
       opacity: 1;
     }
   }
-  
+
+@keyframes animatebackground2 
+{
+ from {background-position: 4320px 0;}
+ to {background-position: 0 0;}
+}
+
+@keyframes animatebackground 
+{
+    0%,100%{
+        transform: translate(0,0);
+    }
+    25%{
+        transform: translate(50%,50%);
+    }
+    50%{
+        
+    }
+    75%{
+        
+    }
+}
